Se cambia el index

--- a/index.html
+++ b/index.html
@@ -6,25 +6,23 @@
 <div data-role="page" id="page1">
     <div data-theme="a" data-role="header">
         <h3>
-            Enrique X
+            Finanzas X
         </h3>
     </div>
     <div data-role="content">
-        <form action="">
-            <div data-role="fieldcontain">
-                <label for="textinput1">
-                    Cuenta
-                </label>
-                <input name="nombre" id="textinput1" placeholder="nombre de la cuenta"
-                value="" type="text">
-            </div>
-            <div data-role="fieldcontain">
-                <label for="textinput2">
-                    Cantidad
-                </label>
-                <input name="monto" id="textinput2" placeholder="cantidad " value="" type="text">
-            </div>
-        </form>
+        <a data-role="button" data-theme="a" href="#page1" data-icon="arrow-r"
+        data-iconpos="right">
+            Crear presupuesto
+        </a>
+        <a data-role="button" data-theme="a" href="#page1" data-icon="arrow-r"
+        data-iconpos="right">
+            Ver presupuesto
+        </a>
+    </div>
+     <div data-theme="a" data-role="footer" data-position="fixed">
+        <h1>
+            powered by EGo X
+        </h1>
     </div>
 </div>
 
