--- a/presupuesto.html
+++ b/presupuesto.html
@@ -1,1 +1,72 @@
 <html>
+<body>
+<link rel="stylesheet" href="css/jquery.mobile-1.3.1.min.css">
+<div class='header'><h1>Inicio</h1></div>
+<!-- Home -->
+<div data-role="page" id="page1">
+    <div data-theme="a" data-role="header">
+        <h3>
+            Finanzas X
+        </h3>
+    </div>
+    <div data-role="content">
+        <h4>
+            Presupuesto
+        </h4>
+        <form action="">
+            &lt;form&gt;
+        </form>
+        <div data-role="fieldcontain">
+            <label for="selectmenu1">
+                Categoria:
+            </label>
+            <select id="selectmenu1" name="categoria">
+                <option value="1">
+                    Ahorro
+                </option>
+                <option value="2">
+                    Renta
+                </option>
+                <option value="3">
+                    Comida
+                </option>
+                <option value="4">
+                    Despensa
+                </option>
+                <option value="5">
+                    Servicios
+                </option>
+                <option value="6">
+                    Servicios digitales
+                </option>
+                <option value="7">
+                    Gastos personales
+                </option>
+                <option value="8">
+                    Deudas
+                </option>
+            </select>
+        </div>
+        <div data-role="fieldcontain">
+            <label for="textinput1">
+                Monto
+            </label>
+            <input name="" id="textinput1" placeholder="" value="" type="text">
+        </div>
+        <input type="submit" data-icon="plus" data-iconpos="top" value="Agregar">
+    </div>
+     <div data-theme="a" data-role="footer" data-position="fixed">
+        <h1>
+            powered by EGo X
+        </h1>
+    </div>
+</div>
+
+<script src="phonegap.js"></script>
+<script src="lib/jquery-1.9.1.min.js"></script>
+<script src="lib/jquery.mobile-1.3.2.min.js"></script>
+<!--<script src="js/storage/memory-store.js"></script>
+<script src="js/main.js"></script>-->
+
+</body>
+</html>
