--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </h3>
     </div>
     <div data-role="content">
-        <a data-role="button" data-theme="a" href="#page1" data-icon="arrow-r"
+        <a data-role="button" data-theme="a" href="presupuesto.html" data-icon="arrow-r"
         data-iconpos="right">
             Crear presupuesto
         </a>
